--- a/src/talkPage.less
+++ b/src/talkPage.less
@@ -294,22 +294,6 @@ ol > .cd-thread-button-container > .cd-thread-button {
   }
 }
 
-.cd-helpPopup var {
-  background-color: #444;
-  color: white;
-  font-style: normal;
-
-  html.skin-theme-clientpref-night & {
-    background-color: #bbb;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  html.skin-theme-clientpref-os .cd-helpPopup var {
-    background-color: #bbb;
-  }
-}
-
 // T313332
 .cd-dialog-copyLink .oo-ui-textInputWidget input {
   height: auto;
