--- a/src/tribute/tribute.less
+++ b/src/tribute/tribute.less
@@ -15,9 +15,7 @@
 
   // Make it look closer to the OOUI widget.
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
-  border-width: 1px;
-  border-style: solid;
-  border-color: var(--border-color-base, #a2a9b1);
+  border: 1px solid var(--border-color-base, #a2a9b1);
 
   &.tribute-rtl {
     left: auto;
